--- a/css/style.css
+++ b/css/style.css
@@ -420,12 +420,24 @@ h4 { font-size: 1.125rem; }
 }
 
 .menu-card-image {
-    height: 180px;
+    height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
     background: var(--color-cream);
+    overflow: hidden;
+}
+
+.menu-card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: var(--transition);
+}
+
+.menu-card:hover .menu-card-image img {
+    transform: scale(1.05);
 }
 
 
